--- a/app/static/css/pages/booking.css
+++ b/app/static/css/pages/booking.css
@@ -506,6 +506,15 @@
     /* Add ... if name is too long */
 }
 
+.btn-book,
+.btn-cancel,
+.btn-join-waitlist,
+.btn-leave-waitlist {
+    width: 130px;
+    box-sizing: border-box;
+    justify-content: center;
+}
+
 .btn-join-waitlist,
 .btn-leave-waitlist {
     padding: 5px 15px;
@@ -521,12 +530,12 @@
 }
 
 .btn-join-waitlist {
-    background-color: #0eac0b;
+    background-color: #ffc700;
     font-weight: normal;
 }
 
 .btn-leave-waitlist {
-    background-color: #ffc700;
+    background-color: #772432;
     /* A standard danger color */
 }
 
@@ -656,6 +665,20 @@
     /* Remove border from the accordion container itself */
     .accordion-item {
         border: none;
+    }
+
+    .btn-book,
+    .btn-cancel,
+    .btn-join-waitlist,
+    .btn-leave-waitlist {
+        width: 100px;
+        font-size: 0.75em;
+    }
+
+    .booking-table .admin-assign-select {
+        font-size: 0.7em;
+        flex-grow: 0;
+        width: 150px;
     }
 }
 
