--- a/app/static/css/pages/booking.css
+++ b/app/static/css/pages/booking.css
@@ -396,67 +396,7 @@
     /* Rounded corners */
 }
 
-/* --- Completed Roles --- */
-.completed-roles-section-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-.completed-roles-section-header .form-group {
-    margin-bottom: 15px;
-}
-
-.completed-roles-section-header .form-group label {
-    font-size: 0.8em;
-    font-weight: normal;
-    color: #555;
-}
-
-.completed-roles-container {
-    margin-top: 0;
-    padding: 15px;
-    background-color: #f8f9fa;
-    border-radius: 8px;
-}
-
-#level-filter {
-    padding: 5px 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-/* Default state for completed-roles-list (mobile) */
-.completed-roles-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-.completed-roles-list li {
-    padding: 8px 0;
-    border-bottom: 1px solid #e0e0e0;
-    font-size: 0.9em;
-    color: #555;
-    break-inside: avoid-column;
-}
-
-.completed-roles-list li:last-child {
-    border-bottom: none;
-}
-
-.completed-roles-list i {
-    margin-right: 8px;
-    color: #772432;
-}
-
-.completed-roles-list .meeting-ref {
-    font-size: 0.8em;
-    color: #888;
-    margin-left: 10px;
-}
 
 .role-guide-container {
     text-align: center;
@@ -487,7 +427,7 @@
 
     .booking-table .status-cell,
     .booking-table .status-header {
-        width: 20%;
+        width: 30%;
     }
 
     .booking-table .assign-cell,
@@ -497,29 +437,11 @@
 
     .booking-table .icon-cell,
     .booking-table .action-header {
-        width: 20%;
+        width: 10%;
         text-align: center;
         /* Center the action column header and content if desired, or just header? */
     }
 
-
-    /* --- Desktop Completed Roles Grid --- */
-    .completed-roles-list {
-        display: grid;
-        grid-auto-flow: column;
-        grid-auto-columns: 1fr;
-        /* Set break point at 3 items per column */
-        grid-template-rows: repeat(3, auto);
-        gap: 0 25px;
-        /* Column gap only */
-        max-height: none;
-        overflow-y: visible;
-    }
-
-    /* Hide border of last item in first column */
-    .completed-roles-list li:nth-child(3) {
-        border-bottom: none;
-    }
 }
 
 /* Waitlist styles */
@@ -719,12 +641,20 @@
     .btn-leave-waitlist {
         width: 100px;
         font-size: 0.75em;
+        margin-right: 10px;
+
     }
 
     .booking-table .admin-assign-select {
         font-size: 0.7em;
         flex-grow: 0;
         width: 150px;
+    }
+
+    .role-avatar {
+        width: 60px;
+        height: 60px;
+        margin-left: 10px;
     }
 }
 
@@ -740,10 +670,7 @@
         text-align: center;
     }
 
-    .booking-container .completed-roles-section-header {
-        display: flex;
-        flex-direction: column;
-    }
+
 
     .booking-filter-container {
         flex-direction: column;
