--- a/app/static/css/pages/booking.css
+++ b/app/static/css/pages/booking.css
@@ -427,7 +427,7 @@
 
     .booking-table .status-cell,
     .booking-table .status-header {
-        width: 20%;
+        width: 30%;
     }
 
     .booking-table .assign-cell,
@@ -437,12 +437,10 @@
 
     .booking-table .icon-cell,
     .booking-table .action-header {
-        width: 20%;
+        width: 10%;
         text-align: center;
         /* Center the action column header and content if desired, or just header? */
     }
-
-
 
 }
 
@@ -643,12 +641,20 @@
     .btn-leave-waitlist {
         width: 100px;
         font-size: 0.75em;
+        margin-right: 10dafaf'lx;
+
     }
 
     .booking-table .admin-assign-select {
         font-size: 0.7em;
         flex-grow: 0;
         width: 150px;
+    }
+
+    .role-avatar {
+        width: 60px;
+        height: 60px;
+        margin-left: 10px;
     }
 }
 
