refactor: centralize project code derivation logic in SessionLog model and update related UI and routes.

--- a/app/static/css/components/modals.css
+++ b/app/static/css/components/modals.css
@@ -65,6 +65,18 @@
     margin-top: 25px;
 }
 
+/* Ensure form-table inside modals has adequate label width */
+.modal-content .form-table td:first-child {
+    width: 120px;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+
+.modal-content .form-table td {
+    border: none;
+    padding: 10px 5px;
+}
+
 .modal .close {
     color: #aaa;
     float: right;
