refactor: replace hardcoded generic project ID with a named constant and property for improved clarity.

--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -330,8 +330,10 @@
 
     <script>
         // Pass Python data to global JS variables used by speech_modal.js
+        var pathways = {{ pathways| tojson | safe }};
         var pathwayMap = {{ pathway_mapping| tojson | safe }};
         var groupedPathways = {{ pathways| tojson | safe }};
+        var GENERIC_PROJECT_ID = "{{ GENERIC_PROJECT_ID }}";
 
     </script>
     <script src="{{ url_for('static', filename='js/speech_modal.js') }}"></script>
