--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -330,11 +330,11 @@
 
     <script>
         // Pass Python data to global JS variables used by speech_modal.js
+        var allProjects = {{ projects| tojson | safe }};
         var pathways = {{ pathways| tojson | safe }};
         var pathwayMap = {{ pathway_mapping| tojson | safe }};
         var groupedPathways = {{ pathways| tojson | safe }};
         var GENERIC_PROJECT_ID = "{{ GENERIC_PROJECT_ID }}";
-
     </script>
     <script src="{{ url_for('static', filename='js/speech_modal.js') }}"></script>
     <script src="{{ url_for('static', filename='js/agenda.js') }}"></script>
