--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -165,7 +165,7 @@
                     data-duration-min="{{ log_dict.Duration_Min if log_dict.Duration_Min is not none else '' }}"
                     data-duration-max="{{ log_dict.Duration_Max if log_dict.Duration_Max is not none else '' }}"
                     data-status="{{ log_dict.Status if log_dict.Status else '' }}" data-role="{{ log_dict.role or '' }}"
-                    data-project-code="{{ log_dict.project_code or '' }}"
+                    data-project-code="{{ log_dict.project_code or '' }}" data-pathway="{{ log_dict.pathway or '' }}"
                     class="{{ 'section-row' if log_dict.is_section else '' }} {{ 'hidden-row' if log_dict.is_hidden else '' }} {{ 'readonly-row' if log_dict.is_readonly|default(false) else '' }}">
 
                     {# --- Row Content using log_dict --- #}
